Fix #10 : Added Toast as member variable to check if already shown Fix #11 : Edited dark theme and styles to be compatible with day/night settings
Signed-off-by: Krow10 <23462475+Krow10@users.noreply.github.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,7 +93,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/button_text_number_color"
+                android:textColor="?colorAccent"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
@@ -109,7 +109,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/button_text_number_color"
+                android:textColor="?colorAccent"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
@@ -125,7 +125,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/button_text_number_color"
+                android:textColor="?colorAccent"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
@@ -141,7 +141,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/button_text_operation_color"
+                android:textColor="?colorSecondary"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
@@ -164,7 +164,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/button_text_number_color"
+                android:textColor="?colorAccent"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
@@ -180,7 +180,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/button_text_number_color"
+                android:textColor="?colorAccent"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
@@ -196,7 +196,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/button_text_number_color"
+                android:textColor="?colorAccent"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
@@ -212,7 +212,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/button_text_operation_color"
+                android:textColor="?colorSecondary"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
@@ -235,7 +235,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/button_text_number_color"
+                android:textColor="?colorAccent"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
@@ -251,7 +251,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/button_text_number_color"
+                android:textColor="?colorAccent"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
@@ -267,7 +267,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/button_text_number_color"
+                android:textColor="?colorAccent"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
@@ -283,7 +283,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/button_text_operation_color"
+                android:textColor="?colorSecondary"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
@@ -323,7 +323,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/button_text_number_color"
+                android:textColor="?colorAccent"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
@@ -339,7 +339,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/button_text_operation_color"
+                android:textColor="?colorSecondary"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
@@ -354,7 +354,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
-                android:backgroundTint="@color/button_text_operation_color"
+                app:backgroundTint="?colorSecondary"
                 android:textColor="@color/white"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
