--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,23 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Lab1Calc" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Lab1Calc" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/teal_700</item>
+        <item name="colorPrimaryVariant">@color/tart_orange</item>
         <item name="colorOnPrimary">@color/black</item>
+        <item name="colorButtonNormal">@color/dark_grey</item>
+        <item name="colorAccent">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondary">@color/teal_700</item>
+        <item name="colorSecondaryVariant">@color/tart_orange</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
         <!-- Customize your theme here. -->
+        <item name="aboutStyle">@style/Widget.App.AboutPage</item>
+        <item name="android:colorControlActivated">?colorPrimary</item>
+        <item name="android:colorControlNormal">@android:color/tertiary_text_light</item>
+        <item name="android:textColorSecondary">@android:color/tertiary_text_light</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
